@@ -5,10 +5,11 @@ plugins {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation 'cglib:cglib-nodep:3.3.0'
-    implementation 'cglib:cglib:3.3.0'
+    implementation 'cglib:cglib-nodep:3.1'
+    implementation 'cglib:cglib:3.1'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
